deploy/kubernetes/manifest.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: node-red
  namespace: home-automation
  labels:
    app: node-red
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node-red
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: node-red
    spec:
      containers:
        - name: node-red
          image: nodered/node-red:latest
          imagePullPolicy: Always
          resources: {}
          ports:
            - name: http
              containerPort: 1880
              protocol: TCP
          volumeMounts:
            - name: data
              mountPath: /data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: pvc-nfs-node-red

---
kind: Service
apiVersion: v1
metadata:
  name: node-red
  namespace: home-automation
  labels:
    app: node-red
spec:
  selector:
    app: node-red
  type: ClusterIP
  ports:
    - name: "1880"
      port: 1880
      protocol: TCP
      targetPort: http
  sessionAffinity: None

---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: node-red
  namespace: home-automation
  labels:
    app: node-red
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
spec:
  ingressClassName: nginx-private
  rules:
    - host: node-red.k8s.lan
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: node-red
                port:
                  number: 1880
